@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-04
+2013-03-09 Mikhail Dubrovin
+- in CsPad2x2CenterV1 and CsPad2x2TiltV1 improve print()
+
 Tag: V00-04-03
 2013-03-08 Mikhail Dubrovin
 - add new calibraion data classes:  CsPad2x2CenterV1 and CsPad2x2TiltV1
